Processing Image Gallery
Still Doing now

--- a/src/app/components/tableview/dialogview/dialogview.component.css
+++ b/src/app/components/tableview/dialogview/dialogview.component.css
@@ -7,3 +7,13 @@
       margin-top: 1rem;
       margin-bottom: 1rem;
   }
+
+  .imagegallery{
+        height:300px;
+      overflow-y: scroll;
+  }
+
+  .image-card{
+      margin-bottom: .5rem;
+      margin-right: -1.5rem;
+  }
