--- a/src/app/components/tableview/dialogview/dialogview.component.html
+++ b/src/app/components/tableview/dialogview/dialogview.component.html
@@ -47,7 +47,69 @@
                 </div>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-12">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            Images:
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <div class="row imagegallery justify-content-left">
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                        <div class="col-3">
+                            <div class="card image-card">
+                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
+                            </div>                           
+                        </div>
+                    </div>
+                </mat-expansion-panel>
+            </div>
+        </div>
     </mat-card-content>
     <mat-card-actions>
         <div class="row">
@@ -55,6 +117,5 @@
                 <button mat-raised-button color="warn" (click)="onExitClick()">Exit</button>
             </div>
         </div>
-
     </mat-card-actions>
 </mat-card>
