--- a/src/app/components/tableview/tableview.component.html
+++ b/src/app/components/tableview/tableview.component.html
@@ -14,9 +14,9 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <button *ngIf="!editenabled" class="csvbutton" mat-raised-button color="accent" (click)="editbuttonpressed()"><span>Edit  <i class="fa fa-pencil-square-o" aria-hidden="true"></i></span></button>
-            <button *ngIf="editenabled" class="csvbutton" mat-raised-button color="warn" (click)="editbuttonpressed()"><span>Cancel Edit  <i class="fa fa-times" aria-hidden="true"></i></span></button>
-            <button *ngIf="editbuttonEnabled" class="csvbutton" mat-raised-button style="background-color: #8BC34A;color: white;" (click)="editConfirmButton()"><span>Confirm <i class="fa fa-check" aria-hidden="true"></i></span></button>
+            <button *ngIf="!editButtonenabled" class="csvbutton" mat-raised-button color="accent" (click)="editbuttonpressed()"><span>Edit  <i class="fa fa-pencil-square-o" aria-hidden="true"></i></span></button>
+            <button *ngIf="editButtonenabled" class="csvbutton" mat-raised-button color="warn" (click)="editbuttonpressed()"><span>Cancel Edit  <i class="fa fa-times" aria-hidden="true"></i></span></button>
+            <button *ngIf="editConfirmbuttonEnabled" class="csvbutton" mat-raised-button style="background-color: #8BC34A;color: white;" (click)="editConfirmButton()"><span>Confirm <i class="fa fa-check" aria-hidden="true"></i></span></button>
         </div>
         <div class="col-6 text-right">
             <div class="button-row">
@@ -50,8 +50,8 @@
                 <!-- Selection columns-->
                 <ng-container matColumnDef="select">
                     <th mat-header-cell *matHeaderCellDef>
-                        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()">
-                        </mat-checkbox>
+                        <!-- <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()">
+                        </mat-checkbox> -->
                     </th>
                     <td mat-cell *matCellDef="let row">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
