Fixed if the height is too tall
Adding scroll property to allow user to scroll to the bottom

--- a/src/app/components/tableview/dialogview/dialogview.component.html
+++ b/src/app/components/tableview/dialogview/dialogview.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="scrollable">
     <mat-card-header>
         <mat-card-title>Physical: {{data.row.physical_id}}</mat-card-title>
         <mat-card-subtitle>Gender: {{ data.row.gender }}</mat-card-subtitle>
