Adding Lazying loading

--- a/src/app/components/tableview/dialogview/dialogview.component.html
+++ b/src/app/components/tableview/dialogview/dialogview.component.html
@@ -55,57 +55,47 @@
                             Images:
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <div class="row imagegallery justify-content-left">
+                    <div class="row imagegallery justify-content-center lazy-load-images">
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
                         </div>
                         <div class="col-3">
-                            <div class="card image-card">
+                            <div >
                                 <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
                             </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div class="card image-card">
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div class="card image-card">
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
+                        </div>                        
                     </div>
                 </mat-expansion-panel>
             </div>
