--- a/src/app/components/tableview/dialogview/dialogview.component.html
+++ b/src/app/components/tableview/dialogview/dialogview.component.html
@@ -55,47 +55,31 @@
                             Images:
                         </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <div class="row imagegallery justify-content-center lazy-load-images">
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
+                    <div class="gallery-block grid-gallery lazy-load-images">
+                        <div class="row adjust-right" >
+                            <div class="col-lg-3 item">
+                                <a class="lightbox" href="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                    <img class="img-fluid image scale-on-hover" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 item ">
+                                <a class="lightbox" href="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                    <img class="img-fluid image scale-on-hover" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 item">
+                                <a class="lightbox" href="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                    <img class="img-fluid image scale-on-hover" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                </a>
+                            </div>
+                            <div class="col-lg-3 item">
+                                <a class="lightbox" href="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                    <img class="img-fluid image scale-on-hover" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                                </a>
+                            </div>
+
+     
                         </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>
-                        <div class="col-3">
-                            <div >
-                                <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Card image cap">
-                            </div>                           
-                        </div>                        
                     </div>
                 </mat-expansion-panel>
             </div>
