--- a/src/app/components/editmouseview/editmousesmallview/editmousesmallview.component.html
+++ b/src/app/components/editmouseview/editmousesmallview/editmousesmallview.component.html
@@ -11,7 +11,7 @@
         <mat-form-field class="full-width">
             <input class="projectID" type="text" matInput placeholder="Project title" formControlName="projectGroup" required [matAutocomplete]="autoGroup"
                 [formControl]="preProjectTitle" />
-            <mat-autocomplete #autoGroup="matAutocomplete" (optionSelected)="optionselected($event)">
+            <mat-autocomplete #autoGroup="matAutocomplete">
                 <mat-optgroup *ngFor="let group of projectGroupOptions | async" [label]="group.person">
                     <mat-option *ngFor="let name of group.ProjectTitle" [value]="name">
                         {{ name }}
