--- a/src/app/components/insertmouseview/insertmouseview.component.html
+++ b/src/app/components/insertmouseview/insertmouseview.component.html
@@ -27,29 +27,21 @@
             <div class="form-container">
                 <!-- Physical ID -->
                 <mat-form-field>
-                    <input matInput required placeholder="Physical ID">
+                    <input [(ngModel)]="physical_id_inputs" matInput required placeholder="Physical ID">
                 </mat-form-field>
-
-                <!-- Project Title -->
-                <mat-form-field>
-                    <mat-select required placeholder="Project Title">
-                        <mat-option *ngFor="let title of projectTitles" value="{{title}}">{{title}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-
 
                 <!-- Mouse Line -->
                 <mat-form-field>
-                    <mat-select required placeholder="Mouse Line">
+                    <mat-select [(ngModel)]="mouseline_select" required placeholder="Mouse Line">
                         <mat-option *ngFor="let mouseline of mouselines" value="{{mouseline}}">{{mouseline}}</mat-option>
                     </mat-select>
                 </mat-form-field>
 
                 <!-- Group two date pickers to one row-->
-                <div class="row">
-                    <div class="col-6">
+                <div class="row" >
+                    <div class="col-6" >
                         <!-- Birth Date -->
-                        <mat-form-field>
+                        <mat-form-field style="width: 100%;">
                             <input id="birthdatepicker" matInput [matDatepicker]="birthDatepicker" placeholder="Birth Date" (dateChange)="dateTrigger('change', $event)">
                             <mat-datepicker-toggle matSuffix [for]="birthDatepicker"></mat-datepicker-toggle>
                             <mat-datepicker #birthDatepicker></mat-datepicker>
@@ -58,7 +50,7 @@
                     <div class="col-6">
                         <!-- Death Date -->
                         <!-- Disabled previous date if birthDate is set-->
-                        <mat-form-field>
+                        <mat-form-field style="width: 100%;">
                             <input id="deathdatepicker" matInput [min]="birthDate" [matDatepicker]="deathDatepicker" placeholder="Death Date" (dateChange)="dateTrigger('change', $event)">
                             <mat-datepicker-toggle matSuffix [for]="deathDatepicker"></mat-datepicker-toggle>
                             <mat-datepicker #deathDatepicker></mat-datepicker>
@@ -68,31 +60,67 @@
 
                 <!-- Gender -->
                 <mat-form-field>
-                    <mat-select required placeholder="Gender">
+                    <mat-select [(ngModel)]="gender_select" required placeholder="Gender">
                         <mat-option value="Female">Female</mat-option>
                         <mat-option value="Male">Male</mat-option>
                     </mat-select>
                 </mat-form-field>
-                
+
                 <!-- Geno Type -->
                 <mat-form-field>
-                    <mat-select required placeholder="Geno Type">
+                    <mat-select [(ngModel)]="genotype_select" required placeholder="Geno Type">
                         <mat-option *ngFor="let genotype of genotypes" value="{{genotype}}">{{genotype}}</mat-option>
                     </mat-select>
                 </mat-form-field>
 
+
+                <!-- Pheno Type -->
+                <mat-form-field>
+                    <mat-select [(ngModel)]="phenotype_select" required placeholder="Pheno Type">
+                        <mat-option *ngFor="let phenotype of phenotypes" value="{{phenotype}}">{{phenotype}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+                <!-- Project Title -->
+                <mat-form-field>
+                    <mat-select [(ngModel)]="project_title_select" required placeholder="Project Title">
+                        <mat-option *ngFor="let title of projectTitles" value="{{title}}">{{title}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+                <!-- Sacrificer -->
+                <mat-form-field>
+                    <mat-select [(ngModel)]="sacrificer_select" required placeholder="Sacrificer">
+                        <mat-option *ngFor="let sacrificer of sacrificers" value="{{sacrificer}}">{{sacrificer}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
                 
-                
+                <!-- Purpose Of The Experiement-->
                 <mat-expansion-panel class="reason_expanarea">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
-                            Reason Of Experiement
+                            Purpose Of The Experiement
                         </mat-panel-title>
                     </mat-expansion-panel-header>
                     <mat-form-field class="reason_textarea">
-                        <textarea rows="5" matInput placeholder="Start Writing here"></textarea>
+                        <textarea [(ngModel)]="purpose_textarea" rows="5" matInput placeholder="Start Writing here"></textarea>
                     </mat-form-field>
                 </mat-expansion-panel>
+                
+
+                <!-- Comments -->
+                <mat-expansion-panel class="reason_expanarea">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            Comments
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-form-field class="reason_textarea">
+                        <textarea  [(ngModel)]="comment_textarea" rows="5" matInput placeholder="Start Writing here"></textarea>
+                    </mat-form-field>
+                </mat-expansion-panel>                
+
+                <!-- PFA Related checkboxs-->
                 <mat-expansion-panel class="reason_expanarea">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
@@ -104,6 +132,8 @@
                     </mat-expansion-panel-header>
                     <mat-checkbox *ngFor="let pfa_model of pfamodels" class="checkbox" [(ngModel)]="pfa_model.id">{{pfa_model.displayname}}</mat-checkbox>
                 </mat-expansion-panel>
+
+                <!-- FreezeDown Related checkboxs-->
                 <mat-expansion-panel class="reason_expanarea">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
@@ -116,6 +146,8 @@
 
                     <mat-checkbox *ngFor="let freezdown_model of freezedownmodels" class="checkbox" [(ngModel)]="freezdown_model.id">{{freezdown_model.displayname}}</mat-checkbox>
                 </mat-expansion-panel>
+
+                <!-- Image Uploading section -->
                 <mat-expansion-panel class="reason_expanarea">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
@@ -127,20 +159,15 @@
                     </mat-expansion-panel-header>
                     <image-upload></image-upload>
                 </mat-expansion-panel>
-                <!-- 
-                    <mat-form-field>
-                        <textarea matInput placeholder=""></textarea>
-                    </mat-form-field> 
-                -->
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-12 text-center">
             <div class="button-row">
-                <button class="formbutton" mat-raised-button color="primary" (click)="open()">Insert</button>
-                <button class="formbutton" mat-raised-button color="accent">Insert without clear</button>
-                <button class="formbutton" mat-raised-button color="warn">Clear</button>
+                <button id="insert" class="formbutton" mat-raised-button color="primary" (click)="insertButtonPressed($event)">Insert</button>
+                <button id="insert_wo_clear" class="formbutton" mat-raised-button color="accent" (click)="insert_wo_ButtonPressed($event)">Insert without clear</button>
+                <button id="clear" class="formbutton" mat-raised-button color="warn" (click)="clearButtonPressed($event)">Clear</button>
             </div>
         </div>
     </div>
