--- a/src/app/components/tableview/tableview.component.css
+++ b/src/app/components/tableview/tableview.component.css
@@ -27,3 +27,38 @@ th.mat-sort-header-sorted {
     background-color: aliceblue;
     cursor: pointer;
 }
+
+.row_container{
+    overflow-x: scroll;
+    width: 95%;
+    margin: .5rem;
+}
+
+.table-responsive {
+    display: block;
+   
+    overflow-x: auto;
+}
+.mat-table {
+    margin-bottom: 1rem;
+    display: table;
+    border-collapse: collapse;
+    margin: 0px;
+}
+    
+.mat-row,
+.mat-header-row {
+    display: table-row;
+}
+    
+.mat-cell,
+.mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 5px;
+    line-break: unset;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+}
+    
