--- a/src/app/components/tableview/tableview.component.html
+++ b/src/app/components/tableview/tableview.component.html
@@ -14,32 +14,55 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <button *ngIf="!editButtonenabled" class="csvbutton" mat-raised-button color="accent" (click)="editbuttonpressed()"><span>Edit  <i class="fa fa-pencil-square-o" aria-hidden="true"></i></span></button>
-            <button *ngIf="editButtonenabled" class="csvbutton" mat-raised-button color="warn" (click)="editbuttonpressed()"><span>Cancel Edit  <i class="fa fa-times" aria-hidden="true"></i></span></button>
-            <button *ngIf="editConfirmbuttonEnabled" class="csvbutton" mat-raised-button style="background-color: #8BC34A;color: white;" (click)="editConfirmButton()"><span>Confirm <i class="fa fa-check" aria-hidden="true"></i></span></button>
+            <button *ngIf="!editButtonenabled" class="csvbutton" mat-raised-button color="accent" (click)="editbuttonpressed()">
+                <span>Edit
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                </span>
+            </button>
+            <button *ngIf="editButtonenabled" class="csvbutton" mat-raised-button color="warn" (click)="editbuttonpressed()">
+                <span>Cancel Edit
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+            </button>
+            <button *ngIf="editConfirmbuttonEnabled" class="csvbutton" mat-raised-button style="background-color: #8BC34A;color: white;"
+                (click)="editConfirmButton()">
+                <span>Confirm
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+            </button>
         </div>
         <div class="col-6 text-right">
             <div class="button-row">
-                <button class="csvbutton" mat-raised-button color="primary" (click)="export_csv()"><span>Export CSV  <i class="fa fa-download" aria-hidden="true"></i></span></button>
-                <button class="csvbutton" mat-raised-button color="accent"><span>Import CSV  <i class="fa fa-upload" aria-hidden="true"></i></span></button>
-                <button id="insertmousebutton" class="csvbutton" mat-raised-button color="warn" (click)="insertmouseview()"><span>{{ insertmousechecked? insertmousebuttondisplay_closed : insertmousebuttondisplay_opened}}  <i *ngIf="!insertmousechecked" class="fa fa-angle-down" aria-hidden="true"></i>
-                    <i *ngIf="insertmousechecked" class="fa fa-angle-up" aria-hidden="true"></i></span></button>
+                <button class="csvbutton" mat-raised-button color="primary" (click)="export_csv()">
+                    <span>Export CSV
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                    </span>
+                </button>
+                <button class="csvbutton" mat-raised-button color="accent">
+                    <span>Import CSV
+                        <i class="fa fa-upload" aria-hidden="true"></i>
+                    </span>
+                </button>
+                <button id="insertmousebutton" class="csvbutton" mat-raised-button color="warn" (click)="insertmouseview()">
+                    <span>{{ insertmousechecked? insertmousebuttondisplay_closed : insertmousebuttondisplay_opened}}
+                        <i *ngIf="!insertmousechecked" class="fa fa-angle-down" aria-hidden="true"></i>
+                        <i *ngIf="insertmousechecked" class="fa fa-angle-up" aria-hidden="true"></i>
+                    </span>
+                </button>
             </div>
         </div>
     </div>
     <div class="row checkbox_row">
         <div class="col-12">
             Filtered Columns:
-            <ng-template ngFor let-item [ngForOf]="columnsToDisplay">
-                <mat-checkbox *ngIf="item!='Selection'" class="checkbox" id="{{item}}" (change)="checkValue($event)" checked="true">{{item}}</mat-checkbox>
+            <ng-template ngFor let-item [ngForOf]="originalColumns">
+                <mat-checkbox *ngIf="item.id!='select'" class="checkbox" id="{{item.display}}" (change)="checkValue($event)" [checked]="item.checked">{{item.display}}</mat-checkbox>
             </ng-template>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-
-
-            <table mat-table matSort [dataSource]="dataSource">
+    <div class="row row_container">
+        <div class="col-12">
+            <table mat-table matSort [dataSource]="dataSource" class="table-responsive">
                 <!--1. Defining the all columns that are possible to be rendered in the tableview.
                            So By using matColumnDef to set the column id.
                            Set the column header in mat-header-cell with what data to be put along the 
@@ -59,22 +82,16 @@
                     </td>
                 </ng-container>
 
+                <!-- GenoType Confirmation Column -->
+                <ng-container matColumnDef="genotype_confirmation">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>GenoType Confirmation</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.genotype_confirmation}} </td>
+                </ng-container>
+
                 <!-- Physical Column -->
                 <ng-container matColumnDef="physical_id">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Physical ID</th>
                     <td mat-cell *matCellDef="let mouse"> {{mouse.physical_id}} </td>
-                </ng-container>
-
-                <!-- Project Title Column -->
-                <ng-container matColumnDef="project_title">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Project Title</th>
-                    <td mat-cell *matCellDef="let mouse"> {{mouse?.project_title}} </td>
-                </ng-container>
-
-                <!-- Gender Column -->
-                <ng-container matColumnDef="gender">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
-                    <td mat-cell *matCellDef="let mouse"> {{mouse?.gender}} </td>
                 </ng-container>
 
                 <!-- Mouse Line Column -->
@@ -83,16 +100,161 @@
                     <td mat-cell *matCellDef="let mouse"> {{mouse?.mouseline}} </td>
                 </ng-container>
 
+                <!-- Birth Date Column -->
+                <ng-container matColumnDef="birthdate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Birth Date</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.birthdate.toDateString()}}</td>
+                </ng-container>
+
+                <!-- Death Date Column -->
+                <ng-container matColumnDef="deathdate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Death Date</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.deathdate.toDateString()}}</td>
+                </ng-container>
+
+                <!-- Age Column -->
+                <ng-container matColumnDef="age">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
+                    <td mat-cell *matCellDef="let mouse"> 34 </td>
+                </ng-container>
+
+                <!-- Gender Column -->
+                <ng-container matColumnDef="gender">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.gender}} </td>
+                </ng-container>
+
+                <!-- Geno Type Column -->
+                <ng-container matColumnDef="genotype">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Geno Type</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.genotype}} </td>
+                </ng-container>
+
+                <!-- Pheno Type Column -->
+                <ng-container matColumnDef="phenotype">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Pheno Type</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.phenotype}} </td>
+                </ng-container>
+
+                <!-- Project Title Column -->
+                <ng-container matColumnDef="projecttitle">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Project Title</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.project_title}} </td>
+                </ng-container>
+
+                <!-- Purpose Column -->
+                <ng-container matColumnDef="purpose">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Purpose</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.purpose}} </td>
+                </ng-container>
+
+                <!-- Sacrificer Column -->
+                <ng-container matColumnDef="sacrificer">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sacrificer</th>
+                    <td mat-cell *matCellDef="let mouse"> {{mouse?.sacrificer}} </td>
+                </ng-container>
+
+
                 <!-- PFA Liver Column -->
                 <ng-container matColumnDef="pfa_liver">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Liver</th>
-                    <td mat-cell *matCellDef="let mouse"> <span><i class="fa fa-check" aria-hidden="true"></i></span></td>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.liver">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
                 </ng-container>
+
+
+                <!-- PFA Liver With Tumor Column -->
+                <ng-container matColumnDef="pfa_liver_tumor">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Liver With Tumor</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.liver_tumor">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- PFA Small Intenstine Column -->
+                <ng-container matColumnDef="pfa_small_intenstine">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Small Intenstine</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.small_intenstine">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- PFA Small Intenstine With Tumor Column -->
+                <ng-container matColumnDef="pfa_small_intenstine_tumor">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Small Intenstine With Tumor</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.small_intenstine_tumor">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- PFA Skin Column -->
+                <ng-container matColumnDef="pfa_skin">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Skin</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.skin">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- PFA Skin With Hair Column -->
+                <ng-container matColumnDef="pfa_skin_hair">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Skin With Hair</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.skin_hair">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- PFA Other With Hair Column -->
+                <ng-container matColumnDef="pfa_other">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>PFA Other</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.pfa.other">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
 
                 <!-- Freeze Down Liver Column -->
                 <ng-container matColumnDef="freezedown_liver">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>FreezeDown Liver</th>
-                    <td mat-cell *matCellDef="let mouse"> {{mouse.freezedown.liver}} </td>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.freezedown.liver">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- Freeze Down Liver  TumorColumn -->
+                <ng-container matColumnDef="freezedown_liver_tumor">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>FreezeDown Liver Tumor</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.freezedown.liver_tumor">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- Freeze Down Other TumorColumn -->
+                <ng-container matColumnDef="freezedown_other">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>FreezeDown Other</th>
+                    <td mat-cell *matCellDef="let mouse">
+                        <span *ngIf="mouse.freezedown.other">
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        </span>
+                    </td>
                 </ng-container>
 
                 <!-- Row Definition-->
@@ -101,7 +263,9 @@
                     mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></tr>
             </table>
 
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            
         </div>
+        
     </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
